--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.10.1</version> <!-- Update to a compatible version -->
 				<configuration>
+					<release>9</release>
 					<source>17</source>
 					<target>17</target>
 				</configuration>
